apps/staging/bento-pdf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bento-pdf
  namespace: bento-pdf
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - pdf.christophervestman.com
      secretName: bento-pdf-tls
  rules:
    - host: pdf.christophervestman.com
      http:
        paths:
          - backend:
              service:
                name: bento-pdf
                port:
                  number: 8080
            path: /
            pathType: Prefix
